fix #273 link cropping and wrapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,19 +73,16 @@ https://opensource.org/licenses/MIT.
   display: none !important;
 }
 
-.have-links a {
+/* .have-links a {
   color: #1a73e9 !important;
   text-decoration: underline !important;
   display: inline-block;
-  /* Or block, depending on your layout */
   white-space: normal;
-  /* Allows text to wrap */
   word-wrap: break-word;
-  /* Breaks long words onto the next line if needed */
   overflow-wrap: break-word;
   hyphens: auto;
   max-width: 300px;
-}
+} */
 
 @media (max-width: 850px) {
   .have-links a {
